--- a/07.ipynb
+++ b/07.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMA/f9659fkHrbOuGfZVf84",
+      "authorship_tag": "ABX9TyP2MaGKZJh4FisR0wqc09qX",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -245,7 +245,7 @@
       "metadata": {
         "id": "6bmM7DdpG4ne"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -260,9 +260,7 @@
         "# Set up X using the selected features\n",
         "X = df[features]\n",
         "\n",
-        "# Print shapes\n",
-        "print(\"X shape:\", X.shape)\n",
-        "print(\"y shape:\", y.shape)\n",
+        "\n",
         "\n",
         "# Fit and transform the data to standardize it\n",
         "scaler = StandardScaler()\n",
@@ -275,7 +273,7 @@
         "\n",
         "    # Likelihood\n",
         "    mu = pm.math.dot(X_scaled, betas)\n",
-        "    y_obs = pm.Normal('y', mu=mu, sigma=sigma, observed=y)  # Use standardized y if applicable\n",
+        "    y_obs = pm.Normal('y', mu=mu, sigma=sigma, observed=y)\n",
         "\n",
         "    # Sampling\n",
         "    trace = pm.sample(1000, return_inferencedata=True, target_accept=0.95)\n",
@@ -294,7 +292,7 @@
         "id": "7475RE9pBrk-",
         "outputId": "0becc321-5944-4089-b35c-cf49f1beda67"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -344,7 +342,7 @@
         "id": "7hZCpaIXHTFc",
         "outputId": "5603ad44-f07e-4b7f-8676-485a432829fd"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -385,7 +383,7 @@
         "id": "yQ_NnEA-KxcN",
         "outputId": "f751db47-fd6f-4995-a39b-c35aeb435868"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -710,7 +708,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Plot the posterior distributions for all parameters\n",
+        "# Plot the posterior distributions\n",
         "az.plot_posterior(trace)"
       ],
       "metadata": {
@@ -721,7 +719,7 @@
         "id": "-FZu8s30NUkR",
         "outputId": "8f20dcde-b54c-4fdc-9c20-fb54f45d9c2e"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -819,7 +817,7 @@
         "id": "RT6uKYldRWIP",
         "outputId": "1550f3a7-8eeb-4288-ffb7-b4b7c952ad3a"
       },
-      "execution_count": 121,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1302,7 +1300,7 @@
         "id": "T7Pfq_Y4xoHA",
         "outputId": "714ddcad-e155-44a0-bd98-29c0af7b998c"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1377,7 +1375,7 @@
         "id": "bXdDOa0qzP0A",
         "outputId": "18d7f48f-427c-436c-a7c8-6ab0cf2908b1"
       },
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1443,7 +1441,7 @@
         "id": "S5fL6FIM00bt",
         "outputId": "247ff492-220a-4933-9817-bfbe46b734ec"
       },
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1532,7 +1530,7 @@
         "id": "onNDm-xE4cv5",
         "outputId": "62485f90-4b51-4272-ef77-79781ef44e35"
       },
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1971,7 +1969,7 @@
         "id": "R-Qmj8KO5T6i",
         "outputId": "05afd5a8-91b9-4d7f-f057-77e2d083bee6"
       },
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
